--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -123,4 +123,15 @@
     <string name="class_is_undefined">Aula Indefinida (Este bug será resolvido junto com os detalhes completos da turma, provavelmente dia 16/12)</string>
     <string name="going_to_student_portal">Indo para o portal do estudante</string>
     <string name="retrying_connection">Tentando conexão %1$s de 3</string>
+    <string name="grades_not_downloaded_yet">As notas ainda não foram baixadas</string>
+    <string name="grades_image">Imagem Notas</string>
+    <string name="download">Baixar</string>
+    <string name="download_grades">Baixar notas</string>
+    <string name="get_grades_failed">Falha ao pegar notas</string>
+    <string name="downloading_grades">Procurando notas...</string>
+    <string name="semester_grades_not_downloaded">Notas do semestre não estão disponiveis</string>
+    <string name="pref_clear_all_semesters_grades">Limpar notas</string>
+    <string name="pref_clear_all_semesters_grades_summary">Atualizar em caso de erros</string>
+    <string name="grades_cleared">Notas apagadas. Você talvez precise reiniciar o aplicativo</string>
+    <string name="partial_mean">Nota parcial</string>
 </resources>
