--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,10 +129,11 @@
     <string name="grades_image">Grades Image</string>
     <string name="download">Download</string>
     <string name="get_grades_failed">Failed getting grades</string>
-    <string name="downloading_grades">Downloading Grades</string>
+    <string name="downloading_grades">Downloading Grades...</string>
     <string name="semester_grades_not_downloaded">Semester Grades not downloaded</string>
     <string name="download_grades">Download</string>
     <string name="pref_clear_all_semesters_grades">Clean Grades</string>
     <string name="pref_clear_all_semesters_grades_summary">Refresh in case of error</string>
     <string name="grades_cleared">Grades Reset. You might need to restart the app</string>
+    <string name="partial_mean">Partial Mean</string>
 </resources>
