--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,7 +137,7 @@
     <string name="grades_cleared">Grades Reset. You might need to restart the app</string>
     <string name="partial_mean">Partial Mean</string>
     <string name="class_not_found_dev_error">Class not found. This is prob a dev error</string>
-    <string name="class_details_credits">Class Credits: %1$s</string>
+    <string name="class_details_credits">Class Credits: %1$s hours</string>
     <string name="class_details_class_period">Class Period: %1$s</string>
     <string name="class_details_teacher">Teacher: %1$s</string>
     <string name="class_details_department">Department: %1$s</string>
@@ -146,4 +146,5 @@
     <string name="class_details_miss_remain">You still can miss %1$s classes</string>
     <string name="class_details_previous_class">Previous Class: %1$s</string>
     <string name="class_details_next_class">Next Class: %1$s</string>
+    <string name="card_class_details_this_is_a_draft">This is a draft class, update the class to get full information</string>
 </resources>
