--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,4 +153,9 @@
     <string name="class_additional_info_format">%1$s - %2$s hours - %3$s missed classes</string>
     <string name="class_details_failed_by_lack">You failed for lack</string>
     <string name="class_details_can_not_miss_anymore">You can not miss any class</string>
+    <string name="press_back_twice">Press back again to exit the app</string>
+    <string name="application_settings">Application</string>
+    <string name="pref_double_back">Double back</string>
+    <string name="pref_double_back_on">You need to press back twice to exit</string>
+    <string name="pref_double_back_off">You need to press back once to exit</string>
 </resources>
