--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,7 @@
     <string name="pref_double_back">Double back</string>
     <string name="pref_double_back_on">You need to press back twice to exit</string>
     <string name="pref_double_back_off">You need to press back once to exit</string>
+    <string name="classes_not_found">Schedule was not found on start page</string>
+    <string name="check_schedule_in_official_page">Go to official Sagres page and check if the schedule is visible</string>
+    <string name="that_s_embarrassing">That\'s embarrassing</string>
 </resources>
