--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,7 @@
     <string name="that_s_embarrassing">That\'s embarrassing</string>
     <string name="classes">Classes</string>
     <string name="all_classes">All classes</string>
+    <string name="pref_detect_missed_auto">Auto missed class</string>
+    <string name="pref_detect_missed_auto_disabled">App won\'t try to detect if you missed a class automatically</string>
+    <string name="pref_detect_missed_auto_enabled">App will try to detect if you missed a class automatically</string>
 </resources>
