--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
     <string name="about_app_features">After the first login you will have access to you schedule, grades and messages. These data are stored on your smartphone, so even when you have no connection you\'ll still be able to read the data and when your connection returns it will update the data again. The app updates your information periodically and you can control the frequency this happens</string>
     <string name="about_app_notifications">You will receive a notification whenever someone posts a new Grade or a Message on the website (with some delay, based on the selected frequency)</string>
     <string name="about_app_exit">At any moment you can logout by clicking at Settings>Logoff, this action will erase all the saved data related to your Sagres account from the device. You can login again at any time and return receiving notifications.</string>
-    <string name="about_app_bugs">For some stupid mistake, if your Android version is 8.0+ (Oreo) you\'ll not receive any notifications, I\'m working on fixing it :^)</string>
+    <string name="about_app_bugs">For some stupid mistake, if your Android version is 8.0+ (Oreo) you\'ll not receive any notifications, I\'m working on fixing it :^)\nThere's also a notification bug where you receive notifications for messages you already got</string>
     <string name="final_score_text">Final Mean</string>
     <string name="connecting_you_dont_need_to_relog">Connecting, you don\'t need to relog</string>
     <string name="score_is">Score: %1$s</string>
@@ -167,4 +167,9 @@
     <string name="pref_detect_missed_auto_disabled">App won\'t try to detect if you missed a class automatically</string>
     <string name="pref_detect_missed_auto_enabled">App will try to detect if you missed a class automatically</string>
     <string name="days_and_classes">Days and Classes</string>
+    <string name="submit">Submit</string>
+    <string name="write_a_suggestion">Write a suggestion for the app</string>
+    <string name="suggestion">Suggestion</string>
+    <string name="send_email">Send email...</string>
+    <string name="suggestions">Suggestions</string>
 </resources>
