--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="pref_title_vibrate">Vibrate</string>
 
     <!-- Data Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <string name="pref_header_data_sync">Data and sync</string>
     <string name="pref_sync_frequency">Sync frequency</string>
     <string name="pref_sync_frequency_enabled">Every %1$s</string>
     <string name="settings">Settings</string>
@@ -159,4 +159,8 @@
     </string>
     <string name="failed_connect_to_portal">Connection to portal failed...</string>
     <string name="finished">Finished</string>
+
+    <string name="drawer_open">Open Drawer</string>
+    <string name="drawer_close">Close Drawer</string>
+    <string name="pref_use_new_layout">Use new layout</string>
 </resources>
