--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
     <string name="pref_use_new_layout">Use new layout</string>
+    <string name="pref_title_about_and_feedback">About and Feedback</string>
 </resources>
