--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -162,4 +162,6 @@
     <string name="pref_use_new_layout">Usar novo layout</string>
     <string name="third_party_licenses_btn">Licenças de código aberto</string>
     <string name="pref_title_about_and_feedback">Sobre e Feedback</string>
+    <string name="to_do_list">Lista de Tarefas</string>
+    <string name="show_only_uncompleted_tasks">Mostrar apenas incompletas</string>
 </resources>
