--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,5 @@
     <string name="show_only_uncompleted_tasks">Show only not completed tasks</string>
     <string name="class_overview">Overview</string>
     <string name="class_todo_list">To-Do</string>
+    <string name="grades">Grades</string>
 </resources>
