--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,5 @@
     <string name="has_date_limit">Has Date Limit</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="title_tasks">To-Do</string>
 </resources>
