--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -187,4 +187,5 @@
     <string name="download_all">Baixar todos</string>
     <string name="dialog_download_all_classes_conf">Baixar detalhes de todas as disciplinas? Isso demora um pouco e não há barra de progresso</string>
     <string name="sure">Claro!</string>
+    <string name="labs">Laboratórios</string>
 </resources>
