--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="dialog_download_all_classes_conf">Download details of all classes?</string>
     <string name="sure">Sure!</string>
     <string name="labs">Labs</string>
+    <string name="empty_suggestion_field">Suggestion field is empty</string>
 </resources>
