--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,4 +195,5 @@
     <string name="class_review">Class Review</string>
     <string name="class_review_discover_title">Class Review</string>
     <string name="menu_class_review_discover_text">Discover statistics about classes, teachers and decide about taking a class before applying for it</string>
+    <string name="loading_content">Loading content...</string>
 </resources>
