--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -218,4 +218,11 @@
     <string name="pref_do_show_semester">Mostre meu semestre atual, não é ofensivo</string>
 
     <string name="everything_is_all_right">Está tudo sob controle!</string>
+
+    <string name="going_to_enrollment_page">Procurando pela guia de matrícula</string>
+    <string name="title_enrollment_certificate">Guia de Matrícula</string>
+    <string name="title_enrollment_cert_desc">Baixe ou veja a guia</string>
+    <string name="link_to_resource_not_found">Link para a guia não foi encontrada</string>
+    <string name="open_file">Abrir arquivo</string>
+    <string name="file_not_found">Arquivo não encontrado</string>
 </resources>
