--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,4 +232,5 @@
     <string name="link_to_resource_not_found">Link to resource not found</string>
     <string name="open_file">Open file</string>
     <string name="file_not_found">File not found</string>
+    <string name="wait_until_download_finishes">Wait until it finishes</string>
 </resources>
