Show message instead of crashing when link is invalid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,4 +235,5 @@
     <string name="wait_until_download_finishes">Wait until it finishes</string>
     <string name="no_pdf_reader">No PDF reader installed, please install one from the Play Store</string>
     <string name="offline">Offline</string>
+    <string name="cant_open_link">Can\'t open link</string>
 </resources>
