--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -228,4 +228,6 @@
     <string name="wait_until_download_finishes">Estará disponível assim que o download terminar</string>
     <string name="no_pdf_reader">Nenhum Leitor de PDF instalado, por favor, instale algum disponível na PlayStore</string>
     <string name="offline">Sem conexão com a internet</string>
+
+    <string name="cant_open_link">Não é possível abrir este link</string>
 </resources>
