--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,4 +236,6 @@
     <string name="no_pdf_reader">No PDF reader installed, please install one from the Play Store</string>
     <string name="offline">Offline</string>
     <string name="cant_open_link">Can\'t open link</string>
+    <string name="channel_group_general">General</string>
+    <string name="warnings">Announcements</string>
 </resources>
