--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
     <string name="credits">Credits</string>
     <string name="credits_string">
         App Icon: Lokisley Oliveira\nhttps://www.facebook.com/Lokisley\n\n
+        App Name: Lokisley + Matheus Teixeixa\nhttps://www.facebook.com/teixeirista\nCheckout his page(the texts are really great)\nhttps://www.facebook.com/FigurativamenteLiteral/\n\n
     </string>
     <string name="btn_third_party_licenses">Third party licences</string>
 
